Updated images on reg/login for better nav visibility, and to avoid repetitive images. Uploaded some additional images to play with as well. I will need to optimize these files later.

--- a/adopt_app/static/adopt/css/custom-style.css
+++ b/adopt_app/static/adopt/css/custom-style.css
@@ -1,5 +1,4 @@
 .big-banner {
-    background-color: rgba(4, 65, 24, 0.918);
     background-image: url('../images/english-cocker-spaniel-puppy-sitting-on-ground-beside-grass-1254140_right.jpg');
     background-size: cover;    
     min-height: 1047px;
